--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<packaging>jar</packaging>
 	<groupId>org.webjars</groupId>
 	<artifactId>jquery-form</artifactId>
-	<version>3.51.0-2014.06.20-SNAPSHOT</version>
+	<version>3.51.0-2014.06.20</version>
 	<name>jQuery Form Plugin</name>
 	<description>WebJar for jQuery Form Plugin</description>
 	<url>http://webjars.org</url>
